# bin_prot

./: .gitignore  CHANGES.md  CHANGES.txt  COPYRIGHT  COPYRIGHT.txt  INSTALL  INSTALL.txt  META.ab  META.bin_prot.template  Makefile  README.md  README.txt  _oasis  _tags  bin_prot.opam  example.native  install.ml  mac_test.native  myocamlbuild.ml  opam  postconf.sh  setup.ml  test_runner.native
bench/: bench.ml  bench_lists.ml  bench_numbers.ml  bin_prot_bench.ml  dune  jbuild
config/: arch.sh  test.c
doc/: .hgignore.in  Makefile  README.tex
js-utils/: install_tags.ml
lib/: META  bin_prot.mllib  bin_prot.mlpack  bin_prot.odocl  binable.ml  blit_stubs.c  blob.mli  common.ml  common.mli  common_stubs.c  common_stubs.h  int64_emul.h  int64_native.h  int_codes.mlh  libbin_prot_stubs.clib  map_to_safe.ml  read.ml  read.mli  read_c.ml  read_c.mli  read_ml.ml  read_ml.mli  read_stubs.c  size.ml  size.mli  std.ml  type_class.ml  type_class.mli  unsafe_common.ml  unsafe_common.mli  unsafe_read_c.ml  unsafe_read_c.mli  unsafe_write_c.ml  unsafe_write_c.mli  utils.ml  utils.mli  write.ml  write.mli  write_c.ml  write_c.mli  (+3 more)
lib_test/: .hgignore.in  bin_prot_test.ml  example.ml  mac_test.ml  microbench.ml  qtest.ml  test.ml
shape/: README.md
shape/src/: bin_shape.ml  bin_shape.mli  core_fragment.ml  dune  jbuild  shape.mli  std.ml
shape/test/: dune
src/: bin_prot.ml  binable.ml  blit_stubs.c  blit_stubs_xen.c  blob.ml  blob.mli  common.ml  common.mli  detect-arch.sh  dune  float_stubs.c  float_stubs_xen.c  jbuild  local_bigarray.ml  local_bigarray.mli  md5.ml  md5.mli  nat0.ml  nat0.mli  read.ml  read.mli  read_intf.ml  runtime.js  runtime.wat  shape.ml  shape.mli  size.ml  size.mli  size_intf.ml  std.ml  std.mli  type_class.ml  type_class.mli  type_class_intf.ml  utils.ml  utils.mli  utils_intf.ml  write.ml  write.mli  write_intf.ml
src/cinaps/: bin_prot_cinaps.ml  bin_prot_cinaps.mli  dune
syntax/: pa_bin_prot.ml  pa_bin_prot.mli  pa_bin_prot.mllib
test/: bin_prot_test.ml  bin_prot_test.mli  bin_prot_test_nonrec.ml  blob_stability_tests.ml  blob_test.ml  blob_tests.ml  blob_tests.mli  dune  import.ml  integers_repr.expected  integers_repr.expected-32bit  integers_repr.ml  integers_repr.mli  integers_repr_tests_32bit.ml  integers_repr_tests_64bit.ml  integers_repr_tests_js.ml  integers_repr_tests_wasm.ml  jbuild  list_allocation.ml  microbench.ml  non_integers_repr.ml  non_integers_repr.mli  test.ml  test_shape.ml  test_std.ml
test/core/: bin_prot_test_core.ml  dune  import.ml  list_allocation.ml  local_reader_allocations.ml
xen/: blit_stubs.c  cflags.sh  dune  float_stubs.c  jbuild
