opam-version: "1.2"
version: "v0.10.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/bin_prot"
bug-reports: "https://github.com/janestreet/bin_prot/issues"
dev-repo: "git+https://github.com/janestreet/bin_prot.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"                    {>= "v0.10" & < "v0.11"}
  "ppx_compare"             {>= "v0.10" & < "v0.11"}
  "ppx_custom_printf"       {>= "v0.10" & < "v0.11"}
  "ppx_driver"              {>= "v0.10" & < "v0.11"}
  "ppx_fields_conv"         {>= "v0.10" & < "v0.11"}
  "ppx_sexp_conv"           {>= "v0.10" & < "v0.11"}
  "ppx_variants_conv"       {>= "v0.10" & < "v0.11"}
  "sexplib"                 {>= "v0.10" & < "v0.11"}
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
depopts: [
  "mirage-xen-ocaml"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A binary protocol generator

Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
