opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bin_prot"
bug-reports: "https://github.com/janestreet/bin_prot/issues"
dev-repo: "git+https://github.com/janestreet/bin_prot.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bin_prot/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_compare"
  "ppx_custom_printf"
  "ppx_fields_conv"
  "ppx_optcomp"
  "ppx_sexp_conv"
  "ppx_stable_witness"
  "ppx_variants_conv"
  "dune"               {>= "2.0.0"}
]
depopts: [
  "mirage-xen-ocaml"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A binary protocol generator"
description: "
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
