(library
 (name bin_prot_test)
 (libraries base base_bigstring bin_prot
   expect_test_helpers_core.expect_test_helpers_base expect_test_patterns
   float_array base.md5 sexplib splittable_random stdio)
 (preprocess
  (pps ppx_jane)))

(rule
 (alias runtest)
 (deps core/blob_stability_tests.ml integers_repr_tests_64bit.ml
   integers_repr_tests_js.ml integers_repr_tests_wasm.ml)
 (action
  (bash
    "diff <(\necho '869e6b3143f14201f406eac9c05c4cdb  core/blob_stability_tests.ml'\necho '2db396dfced6ae8d095f308acb4c80eb  integers_repr_tests_64bit.ml'\necho '9f7b6332177a4ae9547d37d17008d7ef  integers_repr_tests_js.ml'\necho '22f653bfba79ce30c22fe378c596df54  integers_repr_tests_wasm.ml'\n  ) <(md5sum %{deps})")))
